--- a/Murn-27201103-2023.tex
+++ b/Murn-27201103-2023.tex
@@ -106,10 +106,11 @@ za razumevanje tega diplomskega seminarja.
     podmnožica v $\binom{V(G)}{2},$ ki vsebuje povezave grafa.
 \end{definicija}
 
-Če je $V(G)$ končna množica, je $G$ končen graf. Če je med dvema različnima vozliščema največ 
-ena povezava in nobeno vozlišče ni povezano samo s seboj, pravimo, da je graf enostaven. 
-Vozlišči $v, u \in G$ sta sosedni, če $uv \in E(G).$ Sosednost je ekvivalenčna relacija, zato 
-sosedni vozlišči označimo $u \sim v.$ Če $w, x \in V(G)$ nista sosedni pa pišemo $w \not \sim x.$
+Če je $V(G)$ končna množica, je $G$ končen graf. Število $|V(G)|$ imenujemo red grafa. 
+Če je med dvema različnima vozliščema največ ena povezava in nobeno vozlišče ni povezano samo 
+s seboj, pravimo, da je graf enostaven. Vozlišči $v, u \in G$ sta sosedni, če $uv \in E(G).$ 
+Sosednost je ekvivalenčna relacija, zato sosedni vozlišči označimo $u \sim v.$ Če $w, x \in V(G)$ 
+nista sosedni pa pišemo $w \not \sim x.$
 
 \begin{definicija}
     Komplement grafa $G$, je graf $\overline{G},$ za katerega velja $V(G) = V(\overline{G})$ in 
@@ -153,19 +154,30 @@ Povezan graf ima seveda samo eno komponento. Definirajmo še operacijo združitv
     Združitev grafov $G$ in $H$, je graf $G + H$, za katerega velja $V(G + H) = V(G) \cup V(H)$ 
     in $E(G + H)  = E(G) \cup E(H) \cup \{ uv \;  | \;  u \in V(G) \land v \in V(H) \}.$
 \end{definicija}
-% ali je ta definicija ok? In prevod... ne najdem sploh definicije za joint graphs.
+% ali je ta definicija ok? In prevod... ne najdem sploh definicije za joint graphs ali bi bilo boljše vsota?.
 
 Poglejmo še nekaj primerov osnovnih razredov grafov:
 \begin{itemize}
+    \item Prazen graf na $n$ vozliščih, ki ga označujemo z $N_n$, nima nobenih povezav. 
     \item Polni graf na $n$ vozliščih, ki ga označujemo z $K_n$, ima vse možne povezave.
     \item Polni dvodelni graf, ki ga označujemo z $K_{n, m}$ ima množico 
     vozlišč $V(K_{n,m}) = \{ v_1, v_2, ... , v_n , u_1, u_2, ... , u_m \}$
-    in povezave $E(K_{n, m}) = \{ v_i u_j \; | 1 \leq i \leq n \land 1 \leq j \leq m \}.$ 
+    in povezave $E(K_{n, m}) = \{ v_i u_j \; | \;  1 \leq i \leq n \; \land \; 1 \leq j \leq m \}.$ 
+    \item Zvezda na $n$ vozliščih je poseben primer polnega dvodelnega grafa in jo označujemo
+    z $S_{(n-1)} = K_{1, (n-1)}$
     \item Pot na $n$ vozliščih, ki jo označujemo z $P_n$, ima množico povezav 
     $E(P_n) = \{ v_1 v_2 , v_2 v_3 , ... , v_{n-1} v_n\}.$
     \item Cikel na $n$ vozliščih, dobimo tako, da grafu $P_n$ dodamo povezavo $n 1$.
+    \item IME?? na $k+l$ vozliščih je enak združitvi poti in praznega grafa in ga označujemo s 
+    $F_{k,l} = N_k + P_l.$
+    %fan graph
     \item Drevo je povezan graf, ki ne vsebuje nobenega cikla.
 \end{itemize}
+
+\begin{opomba}
+    Očitno velja $P_1 = K_1 = N_1 = C_1.$ To je graf s samo enim vozliščem. Običajno ga bomo
+    označevali s $K_1.$
+\end{opomba}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -177,6 +189,11 @@ Poglejmo še nekaj primerov osnovnih razredov grafov:
 \section{Metrična dimenzija grafa}
 
 %motivacija neki izvirnega
+TODO - motivacija
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 
 \subsection{Definicija}
 
@@ -287,8 +304,6 @@ vozlišč, je torej metrična dimenzija grafa poti poljubne dolžine enaka $\bet
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
 \subsection{Lastnosti}
@@ -377,6 +392,11 @@ obstaja in lahko zapišemo naslednjo posledico:
 
 %Konec koncev je vsega konec.%
 %Začetki so najtežji.%
+\begin{opomba} \label{opomba_2.11.}
+Če za neko množico $S \subseteq V(G)$ preverjamo, če je rešljiva je dovolj preveriti metrične 
+predstavitve vozlišč $v \in V(G) \setminus S.$ Vozlišča iz $S$ bodo imela po eno komponento 
+vektorja enako nič. 
+\end{opomba}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -530,6 +550,7 @@ dveh naključnih povzeanih grafov.
 \subsection{lastnosti}
 Nekaj osnovnih lastnosti leksikografskega produkta grafov:
 \begin{itemize}
+    \item RED: $|V(G)| = n$ in $|V(H)| = m \; \Rightarrow |V(G[H])| = n \cdot m.$
     \item POVEZANOST: Če je $G$ povezan graf, potem je $G[H]$ povezan. 
     \item NEKOMUTATIVNOST: v splošnem velja $G[H] \neq H[G].$
     \item DISTRIBUTIVNOST: $(G_1 + G_2)[H] = G_1[H] + G_2[H],$ 
@@ -550,12 +571,13 @@ $V(G) = \{v_1, v_2, ... , v_n \}$ in grafa $H$ reda $m$, z množico vozlišč
 $V(H) = \{u_1, u_2, ... , u_m \}$. Zaradi boljše preglednosti vpeljimo oznako 
 $v_{ij} := (v_i, u_j) \in V(G[H]).$
 Sedaj lahko zapišemo
-$$
-d_{G[H]}(v_{ij}, v_{rs}) = \begin{cases}
+\begin{equation} \label{eq:razdalja_produkta}
+    d_{G[H]}(v_{ij}, v_{rs}) = \begin{cases}
         d_G(v_i, v_r); & v_i \neq v_r \\
         a_H(u_j, u_s); & \text{sicer}
     \end{cases}
-$$ 
+
+\end{equation} 
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -586,23 +608,110 @@ Vzemimo sosednji vozlišči $a$, $b \in V(G)$. Vemo, da je vsako vozlišče iz $
 sosednje vsakemu iz $H_i(a).$ 
 Hitro lahko preverimo, da je inducirani podgraf grafa $G[H]$, kjer vzamemo eno 
 vozlišče iz množice $H(b)$ in vsa vozlišča iz $H_i(a)$, izomorfen grafu $H_i + K_1.$ 
-S pomočjo rešljive baze tega združenega grafa bomo konstruirali rešljivo bazo $G[H]$.
+V nadaljevanju bomo pokazali, da lahko z rešljivo bazo tega združenega grafa
+omejimo rešljivo bazo $G[H]$.
 
-\begin{lema}
-    Naj bo $Q$ povezan graf. Obstaja rešljiva baza $S$ grafa $Q + K_1,$ da je 
-    $S \subseteq V(Q).$
-\end{lema}
+TODO - leme
+
+% \begin{lema}
+%     Naj bo $Q$ povezan graf. Obstaja rešljiva baza $S$ grafa $Q + K_1,$ da je 
+%     $S \subseteq V(Q).$
+% \end{lema}
+
+% \begin{dokaz}
+%     Združitev grafov $Q + K_1$ ima množico vozlišč $V(Q) \cup \{ v \}.$ Naj bo $S$ 
+%     rešljiva baza $Q + K_1$. Če $v \notin S.$ je lema dokazana. Denimo $v \in S.$ 
+%     V tem primeru ločimo dve situaciji:
+%     \begin{enumerate}
+%         \item $S \setminus \{ v \} = \emptyset$ 
+        
+%         Trditev \ref{trditev_2.10.} nam pove $Q = P_1 = K_1.$ Sledi $Q + K_1 = P_2.$ 
+%         Hitro lahko preverimo, da je rešljiva baza grafa $P_2$ množica, ki vsebuje enega 
+%         od robnih vozlišč. Torej bi lahko namesto $v$, vzeli vozlišče, ki sestavlja graf 
+%         $Q$ in tako dobimo rešljivo bazo $S \subseteq V(Q).$
+        
+%         \item $S \setminus \{ v \} \not = \emptyset$
+        
+%         Definirajmo $B = V(Q + K_1) \setminus S$ in naj bo $r = |B|,$ torej 
+%         $B = \{b_1, b_2, ..., b_r\}$. Za $t \in \{1, 2, ... r\}$ definiramo množici 
+%         $S_t = S \cup \{b_t\}$ in $B_t = B \setminus \{b_t\}.$
+%         Če obstaja $t$, da $\forall u \in B_t : \; r_{S_t}(u) \not = (1, 1, ..., 1),$
+%         je lema dokazana. Sicer je $Q + K_1$ polen graf. Za poln graf pa lahko vzamemo
+%         rešljivo množico, ki vsebuje vse razen enega vozlišča, torej $S = V(Q).$
+%     \end{enumerate}
+% \end{dokaz}
+
+%NEKAJ LEM VMES
+
+\begin{izrek} \label{izrek_4.2.}
+Naj bo $G$ povezan graf reda $n \geq 2$ in $H$ poljuben graf reda $m \geq 2$, s $k \geq 1$ 
+komponentami $H_1, H_2, ... , H_k$. Potem velja:
+$$
+n \cdot \Bigl ( \Bigl ( \sum_{p=1}^{k} \beta(H_p) \Bigr )  - 1  \Bigr ) 
+\leq \beta(G[H]) \leq 
+n \cdot \Bigl ( \Bigl ( \sum_{p=1}^{k} \beta(H_p + K_1) \Bigr ) + k - 1  \Bigr ) + (n-2). 
+$$
+\end{izrek}
+
+
+V dokazu naslednjega izreka bomo konstruirali grafe, katerih metrična dimenzija je enaka
+spodnji ali zgornji meji iz izreka \ref{izrek_4.2.} ter dvema vmesnima vrednostima.
+
+\begin{izrek}
+Obstajata taka grafa $G$ in $H$, da je $G$ povezan graf reda $n \geq 2$ in $H$ poljuben graf 
+reda $m \geq 2$, s $k \geq 1$ komponentami $H_1, H_2, ... , H_k$, da velja:
+\begin{enumerate}
+    \item $\beta(G[H]) = n \cdot \Bigl ( \Bigl ( \sum_{p=1}^{k} \beta(H_p) \Bigr )  - 1  \Bigr )$
+    \item $\beta(G[H]) = n \cdot \Bigl ( \Bigl ( \sum_{p=1}^{k} \beta(H_p + K_1) \Bigr ) + k - 1 
+     \Bigr ) + (n-2)$
+    \item $\beta(G[H]) = n \cdot \Bigl ( \Bigl ( \sum_{p=1}^{k} \beta(H_p + K_1) \Bigr ) + k - 1  
+    \Bigr )$
+    \item $\beta(G[H]) = n \cdot \Bigl ( \sum_{p=1}^{k} \beta(H_p + K_1) \Bigr ) $
+\end{enumerate}
+\end{izrek}
 
 \begin{dokaz}
-    Združitev grafov $Q + K_1$ ima množico vozlišč $V(Q) \cup \{ v \}.$ Naj bo $S$ 
-    rešljiva baza $Q + K_1$. Če $v \notin S.$ je lema dokazana. Denimo $v \in S.$ 
-    V tem primeru ločimo dve situaciji:
     \begin{enumerate}
-        \item $S\ \{ v \} = \emptyset \; \Rightarrow \;$   
+        \item Naj bo $G = P_n$, $n\geq 4$ in $H$ graf s $k\geq 2$ vozlišči, brez povezav. 
+        Zaradi izreka \ref{izrek_4.2.}, je dovolj pokazati 
+        $\beta(G[H]) \leq n \cdot \Bigl ( \Bigl ( \sum_{p=1}^{k} \beta(H_p) \Bigr )  - 1  \Bigr ) = n 
+        \cdot (k - 1)$. Označimo $V(G) = \{p_1 , p_2, ..., p_n\}$, kjer so $\forall 1 \leq i < n : \; 
+        p_i p_{i+1} \in E(G)$, in $V(H) = \{ v_1, v_2, ..., v_k\}.$ Definirajmo množico 
+        $W = V(G[H]) \setminus G(v_k).$ Velja $|W| = n \cdot (k-1).$ 
+        Pokažimo, da je $W$ rešljiva množica. Opomba \ref{opomba_2.11.} nam pove, da je dovolj preveriti
+        vozlišča iz množice $G(v_k) = \{ (p_1, v_k), (p_2, v_k), ..., (p_n, v_k)\}$. Če se spomnimo formule
+        \ref{eq:razdalja_produkta}, vidimo, da velja:
+        \begin{itemize}
+            \item $2 \leq d((p_i, v_k), (p_{j+1}, v_1)) \neq d((p_j, v_k), (p_{j + 1}, v_1)) = 1,$ 
+            za $ 1 \leq i \leq j < n $.
+            \item $2 \leq d((p_n, v_k), (p_{i-1}, v_1)) \neq d((p_i, v_k), (p_{i- 1}, v_1)) = 1,$ 
+            za $ 2 \leq i < n $.
+            \item $1 = d((p_1, v_k), (p_2, v_1)) \neq d((p_n, v_k), (p_2, v_1)) \geq 2.$
+        \end{itemize}
+        Sledi, da so metrične predstavitve vozlišč iz $G(v_k)$ paroma različne in je $W$ rešljiva množica.
+
+        \item Naj bo $G = S_{n-1}$ zvezda na $n$ vozliščih, $n\geq 4$, in $H$ graf s $k \geq 2$ komponentami
+        $H_1, H_2, ..., H_k,$ kjer je $H_i = P_8.$ Velja $\beta(P_8 + K_1) = 
+        \Bigl \lfloor \frac{2\cdot 8 + 2}{5} \Bigr \rfloor = 3. $ Zato je, podobno kot v prvi točki, pokazati  
+        $$\beta(G[H]) \geq n \cdot \Bigl ( \Bigl ( \sum_{p=1}^{k} \beta(H_p + K_1) \Bigr ) + k - 1 \Bigr ) + 
+        (n-2) = 4kn - 2.$$ 
+        % dokaži to
+
+
     \end{enumerate}
 \end{dokaz}
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+
+\subsubsection{H je nepovezan graf}
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
+\subsubsection{H je povezan graf}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
