--- a/Murn-27201103-2023.tex
+++ b/Murn-27201103-2023.tex
@@ -97,7 +97,7 @@ povezavo med enim in drugim pristopom obravnave le te.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
-\subsection{Osnovni pojmi}
+\subsection{Osnovni pojmi} \label
 Za začetek ponovimo nekaj osnovnih definicij in oznak iz teorije grafov, ki jih bomo potrebovali 
 za razumevanje tega diplomskega seminarja. 
 
@@ -413,6 +413,9 @@ Spomnimo se matematične definicije premera.
     poti v grafu. Torej $${\rm diam}(G) = \underset{v, u \in V(G)}{\max} d(u, v).$$
 \end{definicija}
 
+Iz definicije očitno sledi, da za poljubni dve vozlišči iz povezanega grafa $u, v \in V(G)$
+velja $0 \leq d_G (u, v) \leq {\rm diam}(G).$
+
 \begin{trditev}
     Naj bo $G$ povezan graf in $|V(G)| = n$. Potem velja naslednja povezava:
     $$n \leq ({\rm diam}(G))^{\beta (G)} + \beta (G). $$
@@ -556,6 +559,11 @@ Nekaj osnovnih lastnosti leksikografskega produkta grafov:
     \item DISTRIBUTIVNOST: $(G_1 + G_2)[H] = G_1[H] + G_2[H],$ 
     \item ENAKOST KOMPLEMENTOV: $\overline{G[H]} = \overline{G} [\overline{H}].$
     % kako bi se v resnici pravilno reklo tej lastnosti...?
+    \item PREMER: $$ {\rm diam}(G[H]) =  \begin{cases} 
+        {\rm diam}(G); & |V(G)| \geq 2 \\
+        {\rm diam}(G); & G = K_1
+        \end{cases}$$
+
 \end{itemize}
 
 Poglejmo si kako izgleda razdalja med vozliščema v leksikografskem prodkutu grafov. 
@@ -593,7 +601,8 @@ Sedaj lahko zapišemo
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
-\subsection{Metrična dimenzija in komponente}
+\subsection{Metrična dimenzija leksikografskega produkta glede na metrično dimenzijo grafa $H$}
+%TA PODNASLOV NI NAJBOLJ POSREČEN...
 Obravnavamo leksikografski produkt $G[H]$, kjer je $G$ povezan graf in $H$ pojuben 
 graf. Naj bosta $a \in V(G)$ in $b \in H$ poljubni vozlišči. Za potrebe tega 
 podpoglavlja vpeljimo naslednje oznake:
@@ -643,63 +652,6 @@ TODO - leme
 
 %NEKAJ LEM VMES
 
-\begin{izrek} \label{izrek_4.2.}
-Naj bo $G$ povezan graf reda $n \geq 2$ in $H$ poljuben graf reda $m \geq 2$, s $k \geq 1$ 
-komponentami $H_1, H_2, ... , H_k$. Potem velja:
-$$
-n \cdot \Bigl ( \Bigl ( \sum_{p=1}^{k} \beta(H_p) \Bigr )  - 1  \Bigr ) 
-\leq \beta(G[H]) \leq 
-n \cdot \Bigl ( \Bigl ( \sum_{p=1}^{k} \beta(H_p + K_1) \Bigr ) + k - 1  \Bigr ) + (n-2). 
-$$
-\end{izrek}
-
-
-V dokazu naslednjega izreka bomo konstruirali grafe, katerih metrična dimenzija je enaka
-spodnji ali zgornji meji iz izreka \ref{izrek_4.2.} ter dvema vmesnima vrednostima.
-
-\begin{izrek}
-Obstajata taka grafa $G$ in $H$, da je $G$ povezan graf reda $n \geq 2$ in $H$ poljuben graf 
-reda $m \geq 2$, s $k \geq 1$ komponentami $H_1, H_2, ... , H_k$, da velja:
-\begin{enumerate}
-    \item $\beta(G[H]) = n \cdot \Bigl ( \Bigl ( \sum_{p=1}^{k} \beta(H_p) \Bigr )  - 1  \Bigr )$
-    \item $\beta(G[H]) = n \cdot \Bigl ( \Bigl ( \sum_{p=1}^{k} \beta(H_p + K_1) \Bigr ) + k - 1 
-     \Bigr ) + (n-2)$
-    \item $\beta(G[H]) = n \cdot \Bigl ( \Bigl ( \sum_{p=1}^{k} \beta(H_p + K_1) \Bigr ) + k - 1  
-    \Bigr )$
-    \item $\beta(G[H]) = n \cdot \Bigl ( \sum_{p=1}^{k} \beta(H_p + K_1) \Bigr ) $
-\end{enumerate}
-\end{izrek}
-
-\begin{dokaz}
-    \begin{enumerate}
-        \item Naj bo $G = P_n$, $n\geq 4$ in $H$ graf s $k\geq 2$ vozlišči, brez povezav. 
-        Zaradi izreka \ref{izrek_4.2.}, je dovolj pokazati 
-        $\beta(G[H]) \leq n \cdot \Bigl ( \Bigl ( \sum_{p=1}^{k} \beta(H_p) \Bigr )  - 1  \Bigr ) = n 
-        \cdot (k - 1)$. Označimo $V(G) = \{p_1 , p_2, ..., p_n\}$, kjer so $\forall 1 \leq i < n : \; 
-        p_i p_{i+1} \in E(G)$, in $V(H) = \{ v_1, v_2, ..., v_k\}.$ Definirajmo množico 
-        $W = V(G[H]) \setminus G(v_k).$ Velja $|W| = n \cdot (k-1).$ 
-        Pokažimo, da je $W$ rešljiva množica. Opomba \ref{opomba_2.11.} nam pove, da je dovolj preveriti
-        vozlišča iz množice $G(v_k) = \{ (p_1, v_k), (p_2, v_k), ..., (p_n, v_k)\}$. Če se spomnimo formule
-        \ref{eq:razdalja_produkta}, vidimo, da velja:
-        \begin{itemize}
-            \item $2 \leq d((p_i, v_k), (p_{j+1}, v_1)) \neq d((p_j, v_k), (p_{j + 1}, v_1)) = 1,$ 
-            za $ 1 \leq i \leq j < n $.
-            \item $2 \leq d((p_n, v_k), (p_{i-1}, v_1)) \neq d((p_i, v_k), (p_{i- 1}, v_1)) = 1,$ 
-            za $ 2 \leq i < n $.
-            \item $1 = d((p_1, v_k), (p_2, v_1)) \neq d((p_n, v_k), (p_2, v_1)) \geq 2.$
-        \end{itemize}
-        Sledi, da so metrične predstavitve vozlišč iz $G(v_k)$ paroma različne in je $W$ rešljiva množica.
-
-        \item Naj bo $G = S_{n-1}$ zvezda na $n$ vozliščih, $n\geq 4$, in $H$ graf s $k \geq 2$ komponentami
-        $H_1, H_2, ..., H_k,$ kjer je $H_i = P_8.$ Velja $\beta(P_8 + K_1) = 
-        \Bigl \lfloor \frac{2\cdot 8 + 2}{5} \Bigr \rfloor = 3. $ Zato je, podobno kot v prvi točki, pokazati  
-        $$\beta(G[H]) \geq n \cdot \Bigl ( \Bigl ( \sum_{p=1}^{k} \beta(H_p + K_1) \Bigr ) + k - 1 \Bigr ) + 
-        (n-2) = 4kn - 2.$$ 
-        % dokaži to
-
-
-    \end{enumerate}
-\end{dokaz}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -707,17 +659,113 @@ reda $m \geq 2$, s $k \geq 1$ komponentami $H_1, H_2, ... , H_k$, da velja:
 \subsubsection{H je nepovezan graf}
 
 
+\begin{izrek} \label{izrek_4.1.}
+    Naj bo $G$ povezan graf reda $n \geq 2$ in $H$ poljuben graf reda $m \geq 2$, s $k \geq 1$ 
+    komponentami $H_1, H_2, ... , H_k$. Potem velja:
+    $$
+    n \cdot \Bigl ( \Bigl ( \sum_{p=1}^{k} \beta(H_p) \Bigr )  - 1  \Bigr ) 
+    \leq \beta(G[H]) \leq 
+    n \cdot \Bigl ( \Bigl ( \sum_{p=1}^{k} \beta(H_p + K_1) \Bigr ) + k - 1  \Bigr ) + (n-2). 
+    $$
+    \end{izrek}
+    % A BI MORAL IMET V TEM IZREKU H VSAJ DVE KOMPONENTI?
+    
+    
+    V dokazu naslednjega izreka bomo konstruirali grafe, katerih metrična dimenzija je enaka
+    spodnji ali zgornji meji iz izreka \ref{izrek_4.1.} ter dvema vmesnima vrednostima.
+    
+    \begin{izrek}
+    Obstajata taka grafa $G$ in $H$, da je $G$ povezan graf reda $n \geq 2$ in $H$ poljuben graf 
+    reda $m \geq 2$, s $k \geq 1$ komponentami $H_1, H_2, ... , H_k$, da velja:
+    \begin{enumerate}
+        \item $\beta(G[H]) = n \cdot \Bigl ( \Bigl ( \sum_{p=1}^{k} \beta(H_p) \Bigr )  - 1  \Bigr )$
+        \item $\beta(G[H]) = n \cdot \Bigl ( \Bigl ( \sum_{p=1}^{k} \beta(H_p + K_1) \Bigr ) + k - 1 
+         \Bigr ) + (n-2)$
+        \item $\beta(G[H]) = n \cdot \Bigl ( \Bigl ( \sum_{p=1}^{k} \beta(H_p + K_1) \Bigr ) + k - 1  
+        \Bigr )$
+        \item $\beta(G[H]) = n \cdot \Bigl ( \sum_{p=1}^{k} \beta(H_p + K_1) \Bigr ) $
+    \end{enumerate}
+    \end{izrek}
+    
+    \begin{dokaz}
+        \begin{enumerate}
+            \item Naj bo $G = P_n$, $n\geq 4$ in $H$ graf s $k\geq 2$ vozlišči, brez povezav. 
+            Zaradi izreka \ref{izrek_4.1.}, je dovolj pokazati 
+            $\beta(G[H]) \leq n \cdot \Bigl ( \Bigl ( \sum_{p=1}^{k} \beta(H_p) \Bigr )  - 1  \Bigr ) = n 
+            \cdot (k - 1)$. Označimo $V(G) = \{p_1 , p_2, ..., p_n\}$, kjer so $\forall 1 \leq i < n : \; 
+            p_i p_{i+1} \in E(G)$, in $V(H) = \{ v_1, v_2, ..., v_k\}.$ Definirajmo množico 
+            $W = V(G[H]) \setminus G(v_k).$ Velja $|W| = n \cdot (k-1).$ 
+            Pokažimo, da je $W$ rešljiva množica. Opomba \ref{opomba_2.11.} nam pove, da je dovolj preveriti
+            vozlišča iz množice $G(v_k) = \{ (p_1, v_k), (p_2, v_k), ..., (p_n, v_k)\}$. Če se spomnimo formule
+            \ref{eq:razdalja_produkta}, vidimo, da velja:
+            \begin{itemize}
+                \item $2 \leq d((p_i, v_k), (p_{j+1}, v_1)) \neq d((p_j, v_k), (p_{j + 1}, v_1)) = 1,$ 
+                za $ 1 \leq i \leq j < n $.
+                \item $2 \leq d((p_n, v_k), (p_{i-1}, v_1)) \neq d((p_i, v_k), (p_{i- 1}, v_1)) = 1,$ 
+                za $ 2 \leq i < n $.
+                \item $1 = d((p_1, v_k), (p_2, v_1)) \neq d((p_n, v_k), (p_2, v_1)) \geq 2.$
+            \end{itemize}
+            Sledi, da so metrične predstavitve vozlišč iz $G(v_k)$ paroma različne in je $W$ rešljiva množica.
+    
+            \item Naj bo $G = S_{n-1}$ zvezda na $n$ vozliščih, $n\geq 4$, in $H$ graf s $k \geq 2$ komponentami
+            $H_1, H_2, ..., H_k,$ kjer je $H_i = P_8.$ Velja $\beta(P_8 + K_1) = 
+            \Bigl \lfloor \frac{2\cdot 8 + 2}{5} \Bigr \rfloor = 3. $ % DOKAZ??
+            Zato je, podobno kot v prvi točki, pokazati  
+            $$\beta(G[H]) \geq n \cdot \Bigl ( \Bigl ( \sum_{p=1}^{k} \beta(H_p + K_1) \Bigr ) + k - 1 \Bigr ) + 
+            (n-2) = 4kn - 2.$$ 
+            Naj bo $B$ rešljiva baza $P_8 + K_1$, potem obstaja $v \in V(P_8),$ da je $r_B(v) = (2, 2, 2).$
+            %DOKAZ??
+    
+            Recimo, da je $\beta(G[H]) < 4kn - 2,$ in naj bo $W$ rešljiva baza $G[H]$. 
+            
+            TODO
+    
+            \item TODO
+            \item TODO
+    
+        \end{enumerate}
+    \end{dokaz}
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
 \subsubsection{H je povezan graf}
 
+
+\begin{izrek} \label{izrek_4.3.}
+    Naj bo $G$ povezan graf reda $n \geq 2$ in $H$ povezan graf reda $m \geq 2$. Potem velja:
+    $$
+    n \cdot \beta(H)  
+    \leq \beta(G[H]) \leq 
+    n \cdot \beta(H_p + K_1) + (n-2). 
+    $$
+\end{izrek}
+
+\begin{izrek}
+    Obstajata taka grafa povezana $G$ in $H$, reda vsaj $2$, da velja:
+    \begin{enumerate}
+        \item $\beta(G[H]) = n \cdot \beta(H)$
+        \item $\beta(G[H]) = n \cdot \beta(H_p + K_1) + (n-2)$
+        \item $\beta(G[H]) = n \cdot \beta(H_p + K_1)$
+    \end{enumerate}
+\end{izrek}
+    
+\begin{dokaz}
+    TODO
+\end{dokaz}
+
+Na tej točki se lahko vprašamo, če za vsako vrednost $c$ znotraj zgornjih mej lahko najdemo
+grafa $G$ in $H$, ki bosta zadoščala $\beta(G[H]) = c$.
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
 \subsection{Metrična dimenzija, sosedska dimenzija in dvojčki}
+V tem podpoglavju bomo obravnavali metrično dimenzijo leksikografskega produkta $G[H]$ na podlagi
+reda grafa $G$ in sosedske dimenzije grafa $H$. 
+
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
