--- a/Murn-27201103-2023.tex
+++ b/Murn-27201103-2023.tex
@@ -383,6 +383,10 @@ Ker je $V(G) = W_i \cup \{ v_i\},$ je tudi $V(G)$ rešljiva.
     \end{enumerate}
 \end{trditev}
 
+\begin{dokaz}
+    TODO
+\end{dokaz}
+
 \begin{opomba} \label{op:zadostno_preverjanje}
 Če za neko množico $S \subseteq V(G)$ preverjamo, če je rešljiva je dovolj preveriti metrične 
 predstavitve vozlišč $v \in V(G) \setminus S.$ Vozlišča iz $S$ bodo imela natanko eno komponento 
